--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
@@ -613,9 +613,7 @@
 {%                     elif port_channel_interface.isis_authentication.level_2.mode is arista.avd.defined %}
 {%                         set isis_authentication_mode = "Level-1: " ~ port_channel_interface.isis_authentication.level_1.mode %}
 {%                     else %}
-{%                         if port_channel_interface.isis_authentication_mode is arista.avd.defined %}
-{%                             set isis_authentication_mode = port_channel_interface.isis_authentication_mode %}
-{%                         endif %}
+{%                         set isis_authentication_mode = port_channel_interface.isis_authentication_mode | arista.avd.default("-") %}
 {%                     endif %}
 {%                     if port_channel_interface.isis_network_point_to_point is arista.avd.defined(true) %}
 {%                         set mode = "point-to-point" %}
@@ -624,7 +622,7 @@
 {%                     else %}
 {%                         set mode = "-" %}
 {%                     endif %}
-| {{ ethernet_interface.name }} | {{ channel_group }} | *{{ isis_instance }} | {{ isis_bfd }} | *{{ isis_metric }} | *{{ mode }} | *{{ isis_circuit_type }} | *{{ isis_hello_padding }} | *{{ isis_authentication_mode | arista.avd.default("-") }} |
+| {{ ethernet_interface.name }} | {{ channel_group }} | *{{ isis_instance }} | {{ isis_bfd }} | *{{ isis_metric }} | *{{ mode }} | *{{ isis_circuit_type }} | *{{ isis_hello_padding }} | *{{ isis_authentication_mode }} |
 {%                 endif %}
 {%             else %}
 {%                 if ethernet_interface in ethernet_interfaces_isis %}
@@ -643,9 +641,7 @@
 {%                     elif ethernet_interface.isis_authentication.level_2.mode is arista.avd.defined %}
 {%                         set isis_authentication_mode = "Level-2: " ~ ethernet_interface.isis_authentication.level_2.mode %}
 {%                     else %}
-{%                         if ethernet_interface.isis_authentication_mode is arista.avd.defined %}
-{%                             set isis_authentication_mode = ethernet_interface.isis_authentication_mode %}
-{%                         endif %}
+{%                         set isis_authentication_mode = ethernet_interface.isis_authentication_mode | arista.avd.default("-") %}
 {%                     endif %}
 {%                     if ethernet_interface.isis_network_point_to_point is arista.avd.defined(true) %}
 {%                         set mode = "point-to-point" %}
@@ -654,7 +650,7 @@
 {%                     else %}
 {%                         set mode = "-" %}
 {%                     endif %}
-| {{ ethernet_interface.name }} | {{ channel_group }} | {{ isis_instance }} | {{ isis_bfd }} | {{ isis_metric }} | {{ mode }} | {{ isis_circuit_type }} | {{ isis_hello_padding }} | {{ isis_authentication_mode | arista.avd.default("-") }} |
+| {{ ethernet_interface.name }} | {{ channel_group }} | {{ isis_instance }} | {{ isis_bfd }} | {{ isis_metric }} | {{ mode }} | {{ isis_circuit_type }} | {{ isis_hello_padding }} | {{ isis_authentication_mode }} |
 {%                 endif %}
 {%             endif %}
 {%         endfor %}
