--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -927,15 +927,6 @@ router bgp {{ router_bgp.as }}
 {%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
-{%             if neighbor.additional_paths.send is arista.avd.defined %}
-{%                 set ipv4_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-path send ' ~  neighbor.additional_paths.send %}
-{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
-{%                     set ipv4_neighbor_add_path = ipv4_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
-{%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
-{%                     set ipv4_neighbor_add_path = ipv4_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
-{%                 endif %}
-      {{ ipv4_neighbor_add_path }}
-{%             endif %}
 {%             if neighbor.route_map_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
 {%             endif %}
@@ -963,6 +954,15 @@ router bgp {{ router_bgp.as }}
 {%                     set neighbor_default_originate_cli = neighbor_default_originate_cli ~ " always" %}
 {%                 endif %}
       {{ neighbor_default_originate_cli }}
+{%             endif %}
+{%             if neighbor.additional_paths.send is arista.avd.defined %}
+{%                 set ipv4_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-path send ' ~  neighbor.additional_paths.send %}
+{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                     set ipv4_neighbor_add_path = ipv4_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
+{%                     set ipv4_neighbor_add_path = ipv4_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send_limit %}
+{%                 endif %}
+      {{ ipv4_neighbor_add_path }}
 {%             endif %}
 {%             if neighbor.activate is arista.avd.defined(true) %}
       neighbor {{ neighbor.ip_address }} activate
@@ -1024,6 +1024,9 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} activate
 {%             elif peer_group.activate is arista.avd.defined(false) %}
       no neighbor {{ peer_group.name }} activate
+{%             endif %}
+{%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
+      neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_ipv4_multicast.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -1152,6 +1155,9 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_ipv6.neighbors | arista.avd.natural_sort('ip_address') %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
+      neighbor {{ neighbor.ip_address }} additional-paths receive
+{%             endif %}
 {%             if neighbor.route_map_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
 {%             endif %}
