--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/router-adaptive-virtual-topology.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/router-adaptive-virtual-topology.j2
@@ -12,6 +12,9 @@
 {%     if router_adaptive_virtual_topology.topology_role is arista.avd.defined %}
 
 Topology role: {{ router_adaptive_virtual_topology.topology_role }}
+{%         if router_adaptive_virtual_topology.gateway_vxlan is arista.avd.defined(true) %}
+VXLAN gateway: Enabled
+{%         endif %}
 {%     endif %}
 {%     if router_adaptive_virtual_topology.region is arista.avd.defined or router_adaptive_virtual_topology.zone is arista.avd.defined  or router_adaptive_virtual_topology.site is arista.avd.defined %}
 
